feat: Create a Java CLI wrapper for core Brobot functions
- Created new brobot-cli Gradle module with Java 11
- Implemented CLI using picocli for command parsing
- Added three core commands:
  - get-state-structure: Returns mock state graph as JSON
  - get-observation: Returns mock observation with screenshot
  - execute-action: Accepts JSON payload and returns action result
- All commands output valid JSON for Python subprocess parsing
- Added Gson for JSON serialization
- Configured shadowJar for building runnable JAR
- Added proper logging configuration to output to stderr only
- Updated .gitignore for Java/Gradle files

This completes Milestone 2, Issue #3 requirements.
Note: Currently uses mock data - Brobot integration pending.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,12 @@ brobot-cli.jar
 *.jar
 temp/
 logs/
+
+# Java/Gradle
+.gradle/
+brobot-cli/build/
+brobot-cli/.gradle/
+*.class
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
