Fix tests and CI/CD workflow.

--- a/brobot_client/pyproject.toml
+++ b/brobot_client/pyproject.toml
@@ -65,3 +65,31 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "asyncio: Async tests"
+]
+addopts = "--cov=brobot_client --cov-report=html --cov-report=term-missing --cov-report=xml"
+
+[tool.coverage.run]
+source = ["brobot_client"]
+omit = [
+    "*/tests/*",
+    "*/__pycache__/*",
+    "*/test_*.py"
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*Protocol\\):",
+    "@abstractmethod"
+]
+precision = 2
+show_missing = true
